# telegram-bot

./: .env.example  .gitignore  DEPLOY_EC2.md  Dockerfile  README.md  REAL_PAYMENT_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  test_sms_parser.py
assets/: .gitkeep
bot/: main.py
bot/db/: connection.py  queries.py
bot/handlers/: common.py  deposit.py  profile.py  start.py  states.py
bot/services/: sms_parser.py  sms_worker.py  verifier.py  watchdog.py
bot/webhook/: sms_receiver.py
migrations/: 001_init.sql
scripts/: smoke_test.py
